Tests/RunCMake/Syntax/CommandEOF-stderr.txt
^CMake Error at CommandEOF.cmake:1:
  Unexpected end of file.

  Parse error.  Function missing opening "\(".
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
